Bug 149128 - Shapes connected with connector as odp, open as pptx the connector won't be attached to shapes.
Summary: Shapes connected with connector as odp, open as pptx the connector won't be a...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-17 11:25 UTC by NISZ LibreOffice Team
Modified: 2022-05-30 11:31 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Test file save as odf format (11.18 KB, application/vnd.oasis.opendocument.presentation)
2022-05-17 11:26 UTC, NISZ LibreOffice Team
Details
Test file save as pptx format (23.07 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-05-17 11:27 UTC, NISZ LibreOffice Team
Details
Screenshot the problem (112.78 KB, image/png)
2022-05-17 11:32 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-05-17 11:25:37 UTC
Description:
In ODP, we first draw a connector and then add two shapes (here it is advisable to test with a rectangle because the triangle does not save the points of the glue) and connect them to the join shape and save this to PPTX to lose the connection between the shapes.

Steps to Reproduce:
1. Create a new Impress presentation.
2. Create a connector.
3. Create two shapes (Rectangle).
4. Connect the two shapes with connector.
5. Save as pptx.
6. Open the file.
7. Move the shapes

Actual Results:
The connection between the shapes is lost.

Expected Results:
The connection between the shapes remains.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 2d93fd2631b4f8ceca1068c1779963424ff90e80
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2022-05-17 11:26:56 UTC
Created attachment 180157 [details]
Test file save as odf format
Comment 2 NISZ LibreOffice Team 2022-05-17 11:27:23 UTC
Created attachment 180158 [details]
Test file save as pptx format
Comment 3 NISZ LibreOffice Team 2022-05-17 11:32:08 UTC
Created attachment 180159 [details]
Screenshot the problem
Comment 4 Commit Notification 2022-05-30 10:48:52 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c3f73f75772d076dfb2ed0538e7d515503edc038

tdf#149128 PPTX export: fix <stCxn> and <endCxn> connector properties

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-05-30 11:31:35 UTC
Verified in:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 212cb61fb6adc05395b9f9afe0dacbd6594ae06b
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded