tdf#149128 PPTX export: fix <stCxn> and <endCxn> connector propertiesq:

Change-Id: I1bc90bb8a408546b303b70bcfb27d3549d5e72d3